[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-analyzer = "1.5.0"
hound = "3.5.1"
cpal = "0.15.2"
anyhow = "1.0"
ringbuf = "0.3"
ringbuffer = "0.15.0"
rand = "0.8.5"
minifb = "0.25.0"
